tdf#124279: consider also functions with no arguments

such as PI() or TRUE()

Change-Id: I1243e6d6da7ac884d93d5d46058d94eb35f848ab